<resources>
    <string name="app_name">CivEngageMEnt</string>

    <!--Authentication Screen-->
    <string name="welcome">Welcome to</string>
    <string name="sign_in_via_social_networks">Sign in via Social Networks</string>
    <string name="sign_in_with_email">Or Sign in with Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_via_social_networks">Sign up via Social Networks</string>
    <string name="sign_up_with_email">Or Sign up with Email</string>
    <string name="has_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="passsword_help">Must be at least 6 characters</string>
    <string name="dummy_event_name">SchoolStrike4Climate</string>
    <string name="accessibility_text_now">Participants in this event have said they have seen / used the following resources available at the event location:</string>
    <string name="accessibility_text_soon"></string>
    <string name="app_description">Learn About Nearby Social Movement Events for the Causes You Care About</string>
    <string name="forgot_password_description">Please enter the email of your account to reset your password.</string>
    <string name="reset_password">Reset Password</string>

    <string name="virtualengage_text">Organizers for this event have provided the following ways to engage virtually:</string>
    <string name="virtualengage_text_dummy_desc">Donation links are user-provided and we bear no responsibility in verifying the authenticity of this link. You assume all responsibility for the linked GoFundMe</string>
    <string name="virtualengage_dummy_value">$32,000</string>
    <string name="virtualengage_dummy_value_target">$70,000 goal</string>

    <!--Add Events-->
    <string name="enable_location">Engage with local events</string>
    <string name="description">Learn about nearby social movement events for the causes you care about and contains basic event information, accessibility information for in-person engagement and resources for alternative virtual engagement.</string>
    <string name="event_name_prompt">Event Name*</string>
    <string name="event_causes_prompt">What causes does the event support? (Select all that apply*).</string>
    <string name="event_end_date_prompt">End Date*</string>
    <string name="event_start_date_prompt">Start Date*</string>
    <string name="event_start_time_prompt">Start Time*</string>
    <string name="event_end_time_prompt">End Time*</string>
    <string name="event_location_prompt">Location*</string>
    <string name="event_gofundme_link">Add a GoFundMe Link</string>
    <string name="event_description_hint">Insert any notes or event description...</string>
    <string name="event_accessibilities_question">What accessibility resources are available at this event, as best as you can tell?</string>
    <string name="add_new_event">Add New Event</string>
    <string name="take_landmark_photo">Take Landmark Photo</string>
    <string name="confirm">Confirm</string>
    <string name="no_description">No description available for this event</string>
    <string name="other_instr">If Other, please specify:</string>
    <string name="other_text_hint">Ex: Youth Violence, Juvenile Justice</string>


    <!-- Accessibilities-->
    <string name="accessibility_one">Curb cuts for wheelchair</string>
    <string name="accessibility_two">Medic station with supplies</string>
    <string name="accessibility_three">Medic station with trained staff</string>
    <string name="accessibility_four">Easy access to seating</string>
    <string name="accessibility_five">Venue provides elevator or ramp access</string>
    <string name="accessibility_six">Accessible parking available</string>
    <string name="accessibility_seven">Indoor access with air-conditioning</string>

    <!--Events View-->
    <string name="street_name_dummy">1234 The Main Street</string>


    <!--Causes-->
    <string name="climate">Climate</string>
    <string name="gun_violence">Gun Violence</string>
    <string name="health_care">Health Care</string>
    <string name="immigration">Immigration</string>
    <string name="lgbtq">LGBTQ+</string>
    <string name="poverty">Poverty</string>
    <string name="racial_justice">Racial Justice</string>
    <string name="womxns_right">Womxn\'s Rights</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>