<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/climate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/climate"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/climate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gun_violence_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/gun_violence"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/gun_violence_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/healthcare_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/health_care"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/healthcare_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/immigration_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/immigration"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/immigration_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lgbtq_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/lgbtq"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/lgbtq_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/poverty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/poverty"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/poverty_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/racial_justic_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="@string/racial_justice"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/racial_justice_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/womxns_rights_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:text="Womxn's Rights"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/womxns_rights_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recyclerview_divider_gray"/>
</LinearLayout>