<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_blue">
    <androidx.cardview.widget.CardView
        android:id="@+id/event_name_virtual"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/dummy_event_name"
            android:gravity="center"
            android:textSize="30dp">
        </TextView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dummy_virtualengage_screen1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:text="@string/virtualengage_text_dummy"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name_virtual">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dummy_virtualengage_screen1"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_cost1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/dummy_event_name"
                android:gravity="center"
                android:textSize="26dp"
                app:layout_constraintTop_toTopOf="parent"
                >
            </TextView>

            <com.google.android.material.progressindicator.ProgressIndicator
                app:layout_constraintTop_toBottomOf="@id/text_cost1"
                style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Determinate"
                android:id="@+id/progress_idc"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:circularRadius="90dp"
                app:indicatorColor="@color/primary_blue"
                app:trackColor="#736D6D">

            </com.google.android.material.progressindicator.ProgressIndicator>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/progress_idc"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/virtualengage_text_dummy_desc"
                android:gravity="center"
                android:textSize="14dp"
                >
            </TextView>

            <TextView
                android:id="@+id/virtualengage_value"
                android:layout_width="170dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="@id/progress_idc"
                app:layout_constraintEnd_toEndOf="@id/progress_idc"
                app:layout_constraintTop_toTopOf="@id/progress_idc"
                app:layout_constraintBottom_toBottomOf="@id/progress_idc"
                android:layout_marginBottom="30dp"
                android:text="@string/virtualengage_dummy_value"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue"
                >
            </TextView>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/virtualengage_value"
                android:gravity="center"
                android:text="@string/virtualengage_dummy_value_target"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#736D6D"
                android:layout_width="match_parent"
                android:layout_height="20dp"

                >

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>